--- a/css/tendencias.css
+++ b/css/tendencias.css
@@ -5,14 +5,14 @@
     height: 100%;
     width: auto;
     font-family: serif;
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
+
+
 .title_services {
     text-align: center;
-
+    margin: 10px 0;
 }
 
 .container_cards {
